# lmlib

./: .gitignore  .readthedocs.yaml  404.html  LICENSE.md  MANIFEST.in  README.md  about_us.html  bibliography.html  dev_notes.md  index.html  installation.html  mkdocs.yml  news.html  objects.inv  pyproject.toml  requirements.txt  setup.py  state-space-tutorial.html
.github/workflows/: deploy.yml
_generated/coding/: coding.html
_generated/examples/: index.html
api/: SUMMARY.html  index.html  lmlib.statespace.backend.html  lmlib.utils.check.html  lmlib.utils.colors.html  lmlib.utils.generator.html
api/lmlib.polynomial.poly/: MPoly.html  Poly.html  index.html
api/lmlib.statespace.applications/: TSLM.html  index.html
coding/: README.md  README.rst
doc/: about.rst  about_us.rst  alssm_poly_lecture.tex  api.rst  bibliography.rst  catalog.rst  conf.py  getting_started.rst  index.rst  install.rst  irrls.rst  polynomial.rst  reference.rst  requirements.txt  statespace.rst  user_guide.rst  utils.rst
docs/: Makefile  about_us.md  bibliography.md  build_gallery.py  index.md  mkdocs.yml  state-space-tutorial.md
examples/: README.md  README.rst
lmlib/: __init__.py  _warnings.py
lmlib_doc/: build_gallery.py  mkdocs.yml
scripts/: create_gallery.py  run_all_examples.py  run_all_guides.py  run_local_benchmark_examples.py
search/: search_index.json
tech_notes/: alssm_poly_lecture.tex  dev_notes.md
test/: __init__.py  test_CostSegment.py  test_RLSAlssm.py  test_Trajectory.py  test_backends.py  test_rls.py
tests/: test_export_filter_ceofficiens.py
(+564 files in other folders)
